--- a/index1.html
+++ b/index1.html
@@ -8,9 +8,8 @@
     <title>calculater</title>
     <style>
         *{
-            padding: ;
-            margin: ;
-            box-sizing: ;
+            padding: 1px;
+            margin: 1px;
             outline: 0;
             transition: all 0.5s ease;
         }
